cmake_minimum_required(VERSION 3.18)
project(TransportProtocolLab)
add_executable(proto proto.c)
add_executable(test_state_machine test_state_machine.c)
add_executable(test_rdt2_funcs test_rdt2_funcs.c)
find_library(CMOCKA_LIB cmocka REQUIRED)
target_link_libraries(test_state_machine ${CMOCKA_LIB})
target_link_libraries(test_rdt2_funcs ${CMOCKA_LIB})
