cmake_minimum_required(VERSION 3.16)
project(TransportProtocolLab)
add_executable(proto proto.c)
add_executable(gbn "GO-BACK-N.c")
if (${TESTING})
  add_executable(test_state_machine test_state_machine.c)
  add_executable(test_rdt2_funcs test_rdt2_funcs.c)
  add_executable(test_packet_buffer test_packet_buffer.c)
  find_library(CMOCKA_LIB cmocka REQUIRED)
  target_compile_options(proto PUBLIC  -g3)
  target_link_libraries(test_state_machine ${CMOCKA_LIB})
  target_link_libraries(test_rdt2_funcs ${CMOCKA_LIB})
  target_link_libraries(test_packet_buffer ${CMOCKA_LIB})
  target_compile_options(test_packet_buffer PUBLIC  -g3)
endif()
